# concierge

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  spec.md  test-actual.js
budgeting/dashboard/: app.js  index.html
budgeting/docs/: CLAUDE.md  README.md  actual-rules-setup.example.md  goals.md  pipeline.md  pwa-plan.md  todos.md
budgeting/docs/archive/: automation-plan.md  dashboard-fixes-2026-03-07.md  dashboard-plan.md  dashboard-setup-guide.md  google-sheets-dashboard-guide.md
budgeting/scripts/: .gitignore  advisor.js  ai-provider.js  apply-categories.js  budget-updater.gs  budget-updater.md  categorize.js  count-uncategorized.js  dashboard-server.js  export.js  fetch-rules.js  generate-insights.js  insights-engine.js  package-lock.json  package.json  service-account.json.example  sync-only.js  weekly-brief.js
docs/: session-log.md  troubleshooting-log.md
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
